log
Fri Apr 17 12:07:41 AM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 5/60
6daaa88
Fri Apr 17 01:40:51 AM UTC 2026: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
174e355
Fri Apr 17 02:36:10 AM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:90:32: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   90 |             return map->buckets->value;
      |                                ^~
      |                    (*          )
d876900
Fri Apr 17 02:37:48 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
b3c114b
Fri Apr 17 02:38:52 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 30/60
95c56cc
Fri Apr 17 02:49:14 AM UTC 2026: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 40/60
d12c1c0
Fri Apr 17 02:56:15 AM UTC 2026: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
235f566
Fri Apr 17 03:00:24 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 40/60
85c25c3
Fri Apr 17 03:01:39 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 40/60
499b40a
Fri Apr 17 03:05:54 AM UTC 2026: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 40/60
b758da7
Fri Apr 17 03:06:23 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 50/60
bc8ed3b
Fri Apr 17 03:20:06 AM UTC 2026: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:153:23: error: invalid initializer
  153 |     Pair oldBuckets = map->buckets;
      |                       ^~~
hashmap.c:159:23: error: invalid operands to binary != (have ‘Pair’ and ‘void *’)
  159 |         if(oldBuckets != NULL){
      |                       ^~
hashmap.c:160:38: error: subscripted value is neither array nor pointer nor vector
  160 |             insertMap(map, oldBuckets[i]->key, oldBuckets[i]->value);
      |                                      ^
hashmap.c:160:58: error: subscripted value is neither array nor pointer nor vector
  160 |             insertMap(map, oldBuckets[i]->key, oldBuckets[i]->value);
      |                                                          ^
hashmap.c:161:28: error: subscripted value is neither array nor pointer nor vector
  161 |             free(oldBuckets[i]);
      |                            ^
5701d87
Fri Apr 17 03:20:39 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:153:23: error: invalid initializer
  153 |     Pair oldBuckets = map->buckets;
      |                       ^~~
hashmap.c:159:22: error: subscripted value is neither array nor pointer nor vector
  159 |         if(oldBuckets[i] != NULL){
      |                      ^
hashmap.c:160:38: error: subscripted value is neither array nor pointer nor vector
  160 |             insertMap(map, oldBuckets[i]->key, oldBuckets[i]->value);
      |                                      ^
hashmap.c:160:58: error: subscripted value is neither array nor pointer nor vector
  160 |             insertMap(map, oldBuckets[i]->key, oldBuckets[i]->value);
      |                                                          ^
hashmap.c:161:28: error: subscripted value is neither array nor pointer nor vector
  161 |             free(oldBuckets[i]);
      |                            ^
hashmap.c:153:10: error: variable ‘oldBuckets’ set but not used [-Werror=unused-but-set-variable]
  153 |     Pair oldBuckets = map->buckets;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
6e24d33
Fri Apr 17 03:20:57 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:153:24: error: initialization of ‘Pair *’ from incompatible pointer type ‘Pair **’ [-Wincompatible-pointer-types]
  153 |     Pair *oldBuckets = map->buckets;
      |                        ^~~
hashmap.c:159:26: error: invalid operands to binary != (have ‘Pair’ and ‘void *’)
  159 |         if(oldBuckets[i] != NULL){
      |            ~~~~~~~~~~~~~ ^~
      |                      |
      |                      Pair
hashmap.c:160:41: error: invalid type argument of ‘->’ (have ‘Pair’)
  160 |             insertMap(map, oldBuckets[i]->key, oldBuckets[i]->value);
      |                                         ^~
hashmap.c:160:61: error: invalid type argument of ‘->’ (have ‘Pair’)
  160 |             insertMap(map, oldBuckets[i]->key, oldBuckets[i]->value);
      |                                                             ^~
hashmap.c:161:28: error: incompatible type for argument 1 of ‘free’
  161 |             free(oldBuckets[i]);
      |                  ~~~~~~~~~~^~~
      |                            |
      |                            Pair
In file included from test.c:2:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:687:25: note: expected ‘void *’ but argument is of type ‘Pair’
  687 | extern void free (void *__ptr) __THROW;
      |                   ~~~~~~^~~~~
9c5b282
Fri Apr 17 03:21:13 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 60/60
16cbf03
Fri Apr 17 03:22:12 AM UTC 2026: 
 tests:  17|0
total_score: 60/60
4566888
Fri Apr 17 03:22:45 AM UTC 2026: 
 tests:  17|0
total_score: 60/60
60c7030
Fri Apr 17 03:24:15 AM UTC 2026: 
 tests:  17|0
total_score: 60/60
ae87dbe
Sun Apr 19 10:07:46 PM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:68:27: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   68 |     if(map== NULL) return NULL;
      |                           ^~~~
hashmap.c:67:6: note: declared here
   67 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
ec0bdc6
